Tue Oct 16 06:15:44 2012  Koichi Sasada  <ko1@atdot.net>

	* method.h: introduce new method type VM_METHOD_TYPE_CFUNC_FAST.
	  This method is similar to VM_METHOD_TYPE_CFUNC methods, but
	  called cfunc without building new frame (does not push new control
	  frame). If error is occured in cfunc, the backtrace only shows
	  caller frame and upper.
	  This kind of methods can be added by rb_define_method_fast().
	  This feature is similar to specialized instructions (opt_plus, etc),
	  but more flexible (but a bit slower).

	* class.c (rb_define_method_fast): added.
	  Maybe it will be renamed soon.

	* vm_insnhelper.c (vm_call_method): support method type
	  VM_METHOD_TYPE_CFUNC_FAST.

	* proc.c (rb_method_entry_arity): catch up new method type.

	* vm_method.c (rb_add_method_cfunc_fast): added.

Tue Oct 16 02:32:29 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.h (CI_SET_FASTPATH): add new parameter `enabled'.
	  If `enable' is 0 then CI_SET_FASTPATH() doesn't work.
	  And add new configuration option OPT_CALL_FASTPATH. If this macro
	  was defined by 0, then CI_SET_FASTPATH() doesn't work any more.

	* vm_insnhelper.c (vm_call_method): Pass `0' for `enabled' parameter
	  of CI_SET_FASTPATH if this method is protected.

Tue Oct 16 02:17:35 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h (VM_CALL_*): rename VM_CALL_*_BIT
	  to VM_CALL_* (remove `_BIT' suffix).
	  Add comments on each macros.
	  Remove unused macro VM_CALL_TAILRECURSION_BIT.

	* compile.c, iseq.c, insns.def, vm_insnhelper.c: ditto.

Mon Oct 15 22:14:44 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/envutil.rb (Test::Unit::Assertions#file_assertion):
	  rewrite file assertions.

Mon Oct 15 09:41:17 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (VM_CALLEE_SETUP_ARG): skip CI_SET_FASTPATH() if
	  it was called from vm_yield_setup_args().

Mon Oct 15 05:20:13 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.h CI_SET_FASTPATH: introduce new macro