@@ -1,3 +1,12 @@
+Tue Oct 16 06:29:18 2012  Koichi Sasada  <ko1@atdot.net>
+
+	* vm_insnhelper.c (vm_call_method): disable CI_SET_FASTPATH() if
+	  this method call needs splat argument because cahced functions
+	  (vm_call_attrset, vm_call_ivar, vm_call_cfunc_fast_(unary|binary))
+	  do not check an arity.
+
+	* bootstraptest/test_method.rb: add a test to check an above issue.
+
 Tue Oct 16 06:15:44 2012  Koichi Sasada  <ko1@atdot.net>
 
 	* method.h: introduce new method type VM_METHOD_TYPE_CFUNC_FAST.
